[package]
name = "bitcoin-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"  # HTTP server
bigdecimal = "0.3"
rust_decimal = "1.30"
chrono = "0.4"
